# GalaxyQuery

./: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  main.cpp
DataEntry/: Column.cpp  DB.cpp  DB.h  GalaxyQueryExporter.cpp  Table.cpp  Table.h
QueryEngine/: GalaxyQueryExporter.cpp  GalaxyQueryLoader.cpp  InterpreterQuery.cpp  InterpreterQuery.h
QueryProcess/: QueryHandler.cpp  QueryHandler.h
QueryTokens/: DDL.cpp  DDL.h  DML.cpp  DQL.cpp
include/: Column.h  DB.h  GalaxyQueryExporter.h  GalaxyQueryLoader.h  InterpreterQuery.h  Table.h
